@@ -5559,6 +5559,9 @@
                             <para>Fixed problem #446361 (build issues on Solaris)</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem with creating dirs like ~/mydir</para>
+                        </listitem>
+                        <listitem>
                             <para>Build fixes</para>
                         </listitem>
                     </itemizedlist>
